--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
     "url": "https://github.com/undoZen/bunyan-hub-logger/issues"
   },
   "homepage": "https://github.com/undoZen/bunyan-hub-logger",
-  "peerDependencies": {
-    "bunyan": "^1.3.4"
-  },
   "dependencies": {
-    "bunyan-pub-stream": "^0.2.1",
+    "bunyan": "^1.3.4",
+    "bunyan-pub-stream": "^1.0.0",
     "lodash.assign": "^3.0.0",
     "uuid": "^2.0.1"
   }
