--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bunyan-hub-logger",
-  "version": "0.2.1",
+  "version": "1.0.0-rc",
   "description": "log to bunyan-hub",
   "main": "index.js",
   "scripts": {
